# xal

./: README.md  meson.build
docs/: memory-pools.md
include/: libxal.h  xal.h  xal_be_fiemap.h  xal_be_fiemap_inotify.h  xal_be_xfs.h  xal_bpf.h  xal_bpf_events.h  xal_pool.h
src/: xal.c  xal_be_fiemap.c  xal_be_fiemap_inotify.c  xal_be_xfs.c  xal_bpf.c  xal_bpf_events.bpf.c  xal_pool.c
toolbox/pkgs/: debian.sh
